import/export files connected

--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fruit Stand</title>
-    <link rel="stylesheet" href="common/main.css">
+    <title>Sure Shot Photography Supply</title>
+    <link rel="stylesheet" href="common/main.css">  
 </head>
-<body>
+<body>    
     <header>
-        <h1>Sure Shot Photography Supply</h1>
+         <nav>
+            <a href="products">Buy Cameras</a>
+        </nav>
     </header>
-
     <main>
         <section class="centered">
-            <p>
-                <img class="home-camera" src="Camera-background.jpg">
+            <p>    
             </p>
-            <p>
-                <a href="create-products">Buy Cameras</a>
+            <p>     
             </p>
         </section>
     </main>
