--- a/products/index.html
+++ b/products/index.html
@@ -6,21 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sure Shot Products</title>
     <link rel="stylesheet" href="../common/main.css">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="../product/index.html">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#Home">Home</a>
+            <a href="../">Home</a>
         </nav>
     </header>
-
     <main>
         <h2>Cameras</h2>
         <ul id="cameras">       
         </ul>
     </main>
-
-    <script src="create-products.js" type="module"></script>
+    <script src="./app.js" type="module"></script>
 </body>
 </html>
