--- a/products/index.html
+++ b/products/index.html
@@ -19,6 +19,6 @@
         <ul id="cameras">       
         </ul>
     </main>
-    <script src="./app.js" type="module"></script>
+    <script src="./products.js" type="module"></script>
 </body>
 </html>
