--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -17,16 +17,32 @@
             <a href='../products/index.html'></a>
             <a href="../shopping-cart/">Cart</a>
         </nav>
+<main>
+    <table>
+        <thread>
+            <tr>
+                <th class="cart-headings"=>Products</th>
+                <th>Qty</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
+        </thread>
+        <tbody></tbody>
+        <tfoot>
+            <tr>
+                <th></th> 
+                <th></th>
+                <th>Subtotal</th>
+                <th class="subtotal-cell"></th>
+            </tr>
+        </tfoot>
+    </table>
+    <p class="order-container">
+        <button>Place Order</button>
+    </p>
+    </main>
+    <script src="shopping-cart.js" type=module></script>
 </body>
-<table>
-    <thread>
-        <tr>
-            <th>
-            </th>
-        </tr>
-    </thread>
-</table>
-<tbody>
-    <th></th> 
-</th>
-</tbody>
+</html>
+
+
