added a shopping cart but not working yet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
          <nav>
             <a href="products">Buy Cameras</a>
+            <a href="shopping-cart/">Cart</a>
         </nav>
     </header>
     <main>
