--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -15,7 +15,6 @@
         <nav>
             <a href="../index.html">Home</a>
             <a href='../products/index.html'></a>
-            <a href="../shopping-cart/">Cart</a>
         </nav>
 <main>
     <table>
@@ -27,7 +26,9 @@
                 <th>Total</th>
             </tr>
         </thread>
-        <tbody></tbody>
+        <tbody>
+            <th></th>
+        </tbody>
         <tfoot>
             <tr>
                 <th></th> 
