--- a/products/index.html
+++ b/products/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav>
             <a href="../">Home</a>
+            <a href="../shopping-cart/">Cart</a>
         </nav>
     </header>
     <main>
